[gd_scene load_steps=12 format=3 uid="uid://66tdse57wb7m"]

[ext_resource type="Script" uid="uid://da51r6nsfo2wd" path="res://3d/scripts/main_camera.gd" id="1_vbit3"]
[ext_resource type="Script" uid="uid://5wpp7ie0q33u" path="res://3d/scripts/attachable_sub_viewport.gd" id="2_nxp87"]
[ext_resource type="Shader" uid="uid://p7x88q8m8joh" path="res://3d/shaders/screen_space/horizontal_blur.gdshader" id="3_w57sv"]
[ext_resource type="Shader" uid="uid://qmod3sqf7jf8" path="res://3d/shaders/screen_space/vertical_blur.gdshader" id="4_w57sv"]

[sub_resource type="ViewportTexture" id="ViewportTexture_w57sv"]
viewport_path = NodePath("DepthViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nxp87"]
resource_local_to_scene = true
shader = ExtResource("3_w57sv")
shader_parameter/depth_texture = SubResource("ViewportTexture_w57sv")

[sub_resource type="ViewportTexture" id="ViewportTexture_8nd1s"]
viewport_path = NodePath("NormalViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_nxp87"]
viewport_path = NodePath("DepthViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8nd1s"]
resource_local_to_scene = true
shader = ExtResource("4_w57sv")
shader_parameter/depth_texture = SubResource("ViewportTexture_nxp87")

[sub_resource type="ViewportTexture" id="ViewportTexture_iq1th"]
viewport_path = NodePath("PostProcessing1")

[sub_resource type="ViewportTexture" id="ViewportTexture_8opor"]
viewport_path = NodePath("NormalViewport")

[node name="MainCamera" type="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 0, 0)
script = ExtResource("1_vbit3")

[node name="DepthViewport" type="SubViewport" parent="." node_paths=PackedStringArray("camera")]
transparent_bg = true
script = ExtResource("2_nxp87")
camera = NodePath("../DepthCamera")

[node name="DepthCamera" type="Camera3D" parent="."]
cull_mask = 2

[node name="NormalViewport" type="SubViewport" parent="." node_paths=PackedStringArray("camera")]
transparent_bg = true
script = ExtResource("2_nxp87")
camera = NodePath("../NormalCamera")

[node name="NormalCamera" type="Camera3D" parent="."]
cull_mask = 4

[node name="ThicknessViewport" type="SubViewport" parent="." node_paths=PackedStringArray("camera")]
transparent_bg = true
script = ExtResource("2_nxp87")
camera = NodePath("../ThicknessCamera")

[node name="ThicknessCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.965926, -0.258819, 0, 0.258819, 0.965926, 0, 0, 0)
cull_mask = 8

[node name="PostProcessing1" type="SubViewport" parent="."]
transparent_bg = true

[node name="TextureRect" type="TextureRect" parent="PostProcessing1"]
material = SubResource("ShaderMaterial_nxp87")
texture = SubResource("ViewportTexture_8nd1s")
expand_mode = 2
stretch_mode = 4

[node name="PostProcessing2" type="SubViewport" parent="."]
transparent_bg = true

[node name="TextureRect" type="TextureRect" parent="PostProcessing2"]
material = SubResource("ShaderMaterial_8nd1s")
texture = SubResource("ViewportTexture_iq1th")
expand_mode = 2
stretch_mode = 4

[node name="OutputTextureRect" type="TextureRect" parent="."]
texture = SubResource("ViewportTexture_8opor")
expand_mode = 2
stretch_mode = 4
